Maybe fixed cast on mobile

--- a/castMobile.css
+++ b/castMobile.css
@@ -44,7 +44,7 @@ h2 {
         display: block;
         overflow-wrap: break-word;
         margin: 1100px auto;
-        font-size: 50%;
+        font-size: 25px;
         scale: 3.75;
     }
 
